--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_DB: postgres_simple_bank
+          POSTGRES_DB: simple_bank
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
         options: >-
